[package]
name = "treasurer_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.65"
nom = "7.1.1"
rusqlite = {version = "0.28.0", features = ["bundled", "chrono"]}
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.37"

[profile.release]
lto = true

[dev-dependencies]
approx = "0.5.1"
tempdir = "0.3.7"
